troubleshot the gulp config

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,3 +8,6 @@ html(lang="en")
     title Regional Warehousing
   body
     h1 Testing 
+
+    script(src="./public/scripts/vendor/vendor.js")
+    script(src="./public/scripts/app.js")
