--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -40,3 +40,15 @@
 @include foundation-top-bar
 @include foundation-visibility-classes
 @include foundation-float-classes
+
+@import 'fonts'
+@import 'full-hero'
+@import 'features'
+@import 'features-two'
+@import 'reviews'
+@import 'footer'
+@import 'nav'
+@import 'unitsizehero'
+@import 'unitsizes'
+@import 'location_desc'
+@import 'contact'
