new google map and nav bar

--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -10,6 +10,7 @@ html(lang="en")
     block content      
 
     script(src="./public/scripts/vendor/jquery.min.js")
-    script(src="./public/scripts/vendor/foundation.js")
-    script(src="./public/scripts/app.js")
+    script(src="./public/scripts/vendor/foundation.min.js")
     script(defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js", integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+", crossorigin="anonymous")
+    script.
+      $(document).foundation();
