--- a/src/pug/partials/contact-images.pug
+++ b/src/pug/partials/contact-images.pug
@@ -3,33 +3,33 @@
     .row.large-up-4.small-up-2
       .featured-image-block.column
         a(href='#')
-          img(src='./public/images/DJI_0054.JPG')
+          img(src='./public/images/dji_0054.jpg')
           p.text-center.featured-image-block-title 
       .featured-image-block.column
         a(href='#')
-          img(src='./public/images/DJI_0060.JPG')
+          img(src='./public/images/dji_0060.jpg')
           p.text-center.featured-image-block-title 
       .featured-image-block.column
         a(href='#')
-          img(src='./public/images/DJI_0062.JPG')
+          img(src='./public/images/dji_0062.jpg')
           p.text-center.featured-image-block-title 
       .featured-image-block.column
         a(href='#')
-          img(src='./public/images/DJI_0051.JPG')
+          img(src='./public/images/dji_0051.jpg')
           p.text-center.featured-image-block-title 
       .featured-image-block.column
         a(href='#')
-          img(src='./public/images/IMG_1062.JPG')
+          img(src='./public/images/img_1062.jpg')
           p.text-center.featured-image-block-title  
       .featured-image-block.column
         a(href='#')
-          img(src='./public/images/IMG_1066.JPG')
+          img(src='./public/images/img_1066.jpg')
           p.text-center.featured-image-block-title 
       .featured-image-block.column
         a(href='#')
-          img(src='./public/images/IMG_1064.JPG')
+          img(src='./public/images/img_1064.jpg')
           p.text-center.featured-image-block-title 
       .featured-image-block.column
         a(href='#')
-          img(src='./public/images/IMG_1061.JPG')
+          img(src='./public/images/img_1061.jpg')
           p.text-center.featured-image-block-title 
