--- a/src/pug/partials/features-two.pug
+++ b/src/pug/partials/features-two.pug
@@ -1,7 +1,7 @@
 #features-two
   .marketing-site-content-section
     .marketing-site-content-section-img
-      img(src='./public/images/DJI_0060.JPG', alt='')
+      img(src='./public/images/dji_0060.jpg', alt='')
     .marketing-site-content-section-block
       h3.marketing-site-content-section-block-header Moving Supplies
       p
@@ -11,5 +11,5 @@
       p
         | We provide camper storage for $40.00 per month and coming soon RV storage will be available.
     .marketing-site-content-section-img.small-order-1.medium-order-2
-      img(src='./public/images/DJI_0062.JPG', alt='')
+      img(src='./public/images/dji_0062.jpg', alt='')
 
