--- a/src/pug/partials/full-hero.pug
+++ b/src/pug/partials/full-hero.pug
@@ -1,21 +1,6 @@
 .hero-full-screen
   .top-content-section
-    .top-bar
-      .top-bar-left
-        ul.menu
-          li
-            a(href="#") Regional Warehousing & Mini Storage
-      .top-bar-right
-        ul.menu
-          li
-            a(href="/") Home
-          li
-            a(href='/sizes.html') Unit Sizes
-          li.menu-text
-            a(href="/location.html") Location
-          li
-            a(href='/contact.html') Contact
-          
+    include ./nav.pug          
   .middle-content-section
     h1 Regional Warehousing & Mini Storage
     p Serving Southside, Gadsden, and Rainbow City for 10 years. 
