--- a/src/pug/partials/unitsizes.pug
+++ b/src/pug/partials/unitsizes.pug
@@ -6,7 +6,7 @@
         .product-card 
           .product-card-thumbnail
             a(href='#')
-              img(src='./public/images/5x10.png')
+              img(src='./public/images/5x10.jpg')
           h2.product-card-title
             a(href='#') 5' x 10'
           span.product-card-desc Similar in size to a bathroom, this space is good for storing small furniture, mattress with boxspring, business supplies, and other smaller items.
