--- a/src/sass/blocks/full-hero.scss
+++ b/src/sass/blocks/full-hero.scss
@@ -1,4 +1,4 @@
-$hero-full-screen-bg: url('../images/DJI_0054.JPG') center center no-repeat;
+$hero-full-screen-bg: url('../images/dji_0054.jpg') center center no-repeat;
 $hero-full-screen-bg-size: cover;
 $hero-full-screen-text-color: $white;
 
