--- a/src/pug/partials/nav.pug
+++ b/src/pug/partials/nav.pug
@@ -1,16 +1,30 @@
-.top-bar-container(data-sticky-container='')
-  .top-bar
-    .top-bar-left
-      ul.menu
-        li
-          a(href="#") Regional Warehousing & Mini Storage
-    .top-bar-right
-      ul.menu
-        li
-          a(href="/") Home
-        li
-          a(href='/sizes.html') Unit Sizes
-        li.menu-text
-          a(href="/location.html") Location
-        li
-          a(href='/contact.html') Contact
+.title-bar.hide-for-large(data-responsive-toggle='main-nav', data-hide-for='medium')
+  button.menu-icon(type='button', data-toggle='main-nav')
+  .title-bar-title Menu
+
+.top-bar.hide-for-large#main-nav
+  .top-bar-left
+    ul.menu.vertical.large-horizontal
+      li
+        a(href="/") Home
+      li
+        a(href='/sizes.html') Unit Sizes
+      li
+        a(href="/location.html") Location
+      li
+        a(href='/contact.html') Contact
+
+.top-bar.show-for-large#large-nav
+  .top-bar-left
+    ul.menu
+      li.menu-text Regional Warehousing & Mini Storage
+  .top-bar-right
+    ul.menu.vertical.large-horizontal
+      li
+        a(href="/") Home
+      li
+        a(href='/sizes.html') Unit Sizes
+      li
+        a(href="/location.html") Location
+      li
+        a(href='/contact.html') Contact
