--- a/src/sass/blocks/location_desc.sass
+++ b/src/sass/blocks/location_desc.sass
@@ -11,8 +11,22 @@
     padding-top: 2em
 
   #map
-    background-color: #424242
-    text-align: center
-    width: 744px
-    margin-left: auto
-    margin-right: auto 
+    // background-color: #424242
+    // text-align: center
+    // width: 744px
+    // margin-left: auto
+    // margin-right: auto 
+    width: 75%
+    @include horizontal-center
+    overflow: hidden
+    padding-bottom: 56.25%
+    position: relative
+    height: 0
+
+    iframe 
+      position: absolute
+      top: 0
+      left: 0
+      width: 100% !important
+      height: 100% !important
+    
