initial SEO config

--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 html(lang="en")
   head
+    //- Google, Facebook, Pinterest search
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    meta(property="og:type", content="article")
+    meta(property="og:title", content="Regional Warehousing & Mini Storage")
+    meta(property="og:url", content="http://regionalwarehousing.com")
+    meta(property="og:image", content="http://regionalwarehousing.com/public/images/dji_0054.jpg")
+    meta(property="og:description", content="Serving the warehousing and storage needs for Gadsden, Southside, and Rainbow City for 10 years.")
+
+    //- Twitter search
+    meta(name="twitter:card", content="summary")
+    meta(name="twitter:title", content="Regional Warehousing & Mini Storage")
+    meta(name="twitter:url", content="http://regionalwarehousing.com")
+    meta(name="twitter:description", content="Serving the warehousing and storage needs for Gadsden, Southside, and Rainbow City for 10 years.")
+    meta(name="twitter:image", content="http://regionalwarehousing.com/public/images/dji_0054.jpg")
     link(rel="stylesheet", href="./public/stylesheets/index.css")
     title Regional Warehousing
   body
