--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -73,7 +73,13 @@
     }
 
     .footer-right {
-      text-align: right;
+      @media screen and (min-width: 1024px) {
+        text-align: right;
+      }
+
+      @media screen and (max-width: 1024px) {
+        margin-top: 1em;
+      }
 
       .baseline {
         display: table-cell;
