--- a/src/sass/blocks/location_desc.sass
+++ b/src/sass/blocks/location_desc.sass
@@ -5,10 +5,12 @@
 
   p#instructions
     text-align: center
-    width: 40em
     margin-left: auto
     margin-right: auto
     padding-top: 2em
+    width: 90%
+    @media screen and (min-width: 640px)
+      width: 50% 
 
   #map
     // background-color: #424242
