Mr. Stone's change requests - storage picture and RV/Camper storage

--- a/src/pug/partials/features-two.pug
+++ b/src/pug/partials/features-two.pug
@@ -9,7 +9,7 @@
     .marketing-site-content-section-block.small-order-2.medium-order-1
       h3.marketing-site-content-section-block-header Camper Storage
       p
-        | We provide camper storage for $40.00 per month and coming soon RV storage will be available.
+        | We provide camper and RV storage for $40.00 per month and coming soon covered storage will also be available for your RV or camper.
     .marketing-site-content-section-img.small-order-1.medium-order-2
-      img(src='./public/images/dji_0062.jpg', alt='')
+      img(src='./public/images/dji_1062.jpg', alt='')
 
