typo fix in unit size page

--- a/src/pug/partials/unitsizes.pug
+++ b/src/pug/partials/unitsizes.pug
@@ -18,7 +18,7 @@
               img(src='./public/images/10x10.jpg')
           h2.product-card-title
             a(href='#') 10' x 10'
-          span.product-card-desc Close to a small bedroom in size, this unit is good for storing larger furniture and other major Sized more like a regular bedroom, this space is ideal for larger furniture and appliances along with boxes and commercial inventory.
+          span.product-card-desc Close to a small bedroom in size, this unit is good for storing larger furniture and other major appliances along with some commercial inventory.
       .cell.medium-3
         //- 10x15
         .product-card 
