--- a/src/pug/partials/features-two.pug
+++ b/src/pug/partials/features-two.pug
@@ -11,5 +11,5 @@
       p
         | We provide camper and RV storage for $40.00 per month and coming soon covered storage will also be available for your RV or camper.
     .marketing-site-content-section-img.small-order-1.medium-order-2
-      img(src='./public/images/dji_1062.jpg', alt='')
+      img(src='./public/images/img_1062.jpg', alt='')
 
